Apps/Wordpress/netpol/mysql-policy-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-policy-allow
spec:
  podSelector:
    matchLabels:
      app: mysql-app
      tier: db
      environment: wordpress
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress-app
          tier: app
          environment: wordpress
    ports:
    - protocol: TCP
      port: 3306
  - from:
    - podSelector:
        matchLabels:
          app: mysql-service
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - ipBlock:
        cidr: 192.168.56.0/24
